--- a/src/app/alone/pages/alone-page/alone-page.component.html
+++ b/src/app/alone/pages/alone-page/alone-page.component.html
@@ -11,11 +11,10 @@
     <div class="row">
       <div class="col">
         <p>*Este componente no necesita ser importado en módulos</p>
-        <p>Es porque es su propio módulo</p>
-
+        <p>Porque es su propio módulo</p>
 
         <!-- Contador -->
-        <counter-alone [counter]="25"></counter-alone>
+        <!-- <counter-alone [counter]="25"></counter-alone> -->
 
       </div>
     </div>
